Update index.html to leverage default.html

--- a/index.html
+++ b/index.html
@@ -1,27 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Taylor Peterson</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Taylor Peterson!</h1>
-				<p>Meow...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:taylor.edward.peterson@gmail.com">email</a></li>
-        		<li><a href="https://github.com/taylor-peterson">github.com/taylor-peterson</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Taylor Peterson
+---
+<div class="blurb">
+	<h1>Hi there, I'm Taylor Peterson!</h1>
+	<p>Meow...</a></p>
+</div><!-- /.blurb -->
