Misc. cleanup and enable google analytics

--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: Taylor Peterson
 <div class="blurb">
 	<h1>Hi there, I'm Taylor Peterson!</h1>
 	<p>Meow...</a></p>
-</div><!-- /.blurb -->
+</div>
